# prompt-versioning-cli

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: copilot-mcp-config.json
.github/workflows/: ci.yml  publish.yml  test.yml
docs/: DEVELOPER_GUIDE.md  USER_GUIDE.md
examples/: support-bot-example.md
examples/prompts/: support-bot.yaml
python/: .pypirc.template  MANIFEST.in  README.md  pyproject.toml
python/src/prompt_versioning/: __init__.py
python/src/prompt_versioning/agent/: __init__.py  agent.py  models.py
python/src/prompt_versioning/agent/backends/: __init__.py  anthropic_backend.py  base.py  ollama_backend.py  openai_backend.py
python/src/prompt_versioning/cli/: __init__.py  main.py
python/src/prompt_versioning/cli/commands/: __init__.py  agent.py  audit.py  checkout.py  commit.py  create_prompt.py  diff.py  init.py  log.py  mcp.py  mcp_setup.py  status.py  tag.py  tags.py
python/src/prompt_versioning/cli/core/: __init__.py  repository.py
python/src/prompt_versioning/cli/utils/: __init__.py  constants.py  execution.py  output.py  validation.py
python/src/prompt_versioning/core/: __init__.py  models.py
python/src/prompt_versioning/core/repository/: __init__.py  audit_ops.py  base.py  commit_ops.py  ref_resolver.py  tag_ops.py  version_ops.py
python/src/prompt_versioning/core/storage/: __init__.py  audit_log.py  backend.py  commit_storage.py  filesystem.py  prompt_storage.py  tag_storage.py
python/src/prompt_versioning/mcp/: __init__.py  __main__.py
python/src/prompt_versioning/mcp/handlers/: __init__.py  checkout_version.py  command_helper.py  commit_prompt.py  create_prompt.py  diff_versions.py  execute_command.py  generate_audit.py  get_history.py  get_status.py  help_checker.py  init_repository.py  list_tags.py  rollback.py  tag_experiment.py
python/src/prompt_versioning/mcp/protocol/: __init__.py  models.py  resources.py  server.py  tools.py
python/src/prompt_versioning/utils/: __init__.py  diff.py
python/src/prompt_versioning_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
python/tests/: __init__.py  test_integration.py
python/tests/test_agent/: __init__.py  test_agent.py  test_conversation.py  test_models.py
python/tests/test_agent/test_backends/: __init__.py  test_anthropic_backend.py  test_base.py  test_ollama_backend.py  test_openai_backend.py
python/tests/test_cli/: __init__.py
python/tests/test_cli/test_commands/: __init__.py  test_basic_commands.py
python/tests/test_cli/test_core/: __init__.py
python/tests/test_cli/test_utils/: __init__.py
python/tests/test_core/: __init__.py  test_models.py
python/tests/test_core/test_repository/: __init__.py  test_base.py
python/tests/test_core/test_storage/: __init__.py
python/tests/test_mcp/: __init__.py
python/tests/test_mcp/test_handlers/: __init__.py  test_command_helper.py
python/tests/test_mcp/test_protocol/: __init__.py  test_server.py
python/tests/test_utils/: __init__.py  test_diff.py
typescript/: .eslintrc.js  .npmignore  README.md  jest.config.js  package-lock.json  package.json
typescript/src/: agent.ts  bindings.ts  cli.ts  executor.ts  index.test.ts  index.ts  parsers.ts  repository.ts  response-parser.ts  types.ts
