[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-versioning-cli"
version = "1.0.0"
description = "Git-like version control for LLM prompts with lineage tracking and audit trails"
readme = {file = "../README.md", content-type = "text/markdown"}
requires-python = ">=3.9"
license = {text = "AGPL-3.0-or-later"}
authors = [
    {name = "Prompt Versioning Contributors", email = "esmaeilabedi@outlook.com"}
]
maintainers = [
    {name = "Prompt Versioning Contributors", email = "esmaeilabedi@outlook.com"}
]
keywords = [
    "llm",
    "prompt",
    "version-control",
    "git",
    "prompt-engineering",
    "mlops",
    "ai",
    "machine-learning",
    "prompt-management",
    "ai-tools",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Version Control",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
    "Environment :: Console",
]
dependencies = [
    "click>=8.0.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
agent = [
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "requests>=2.31.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "types-PyYAML",
]
all = [
    "prompt-versioning-cli[agent,dev]",
]

[project.urls]
Homepage = "https://github.com/esmaeil-abedi-dev/prompt-versioning-cli"
Documentation = "https://github.com/esmaeil-abedi-dev/prompt-versioning-cli/tree/main/docs"
Repository = "https://github.com/esmaeil-abedi-dev/prompt-versioning-cli.git"
Issues = "https://github.com/esmaeil-abedi-dev/prompt-versioning-cli/issues"
Changelog = "https://github.com/esmaeil-abedi-dev/prompt-versioning-cli/blob/main/CHANGELOG.md"
"Source Code" = "https://github.com/esmaeil-abedi-dev/prompt-versioning-cli"

[project.scripts]
promptvc = "prompt_versioning.cli:main"
promptvc-mcp = "prompt_versioning.mcp.protocol.server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=prompt_versioning --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = "yaml.*"
ignore_missing_imports = true
